Add experimental JVM options for cgroup memory limits